tests/NormalTests/paczka1/small_fuzzy/17545831.err
Error in line 3: A574 S285 3,7
Error in line 7: A574 A574 39,6
